<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/linerlayout_user"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tv_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:textSize="20dp"
           />
        <TextView
            android:id="@+id/tv_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:padding="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:hint="@string/hint_age"
            android:id="@+id/tv_user_age"
            android:padding="20dp"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_previous"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:id="@+id/button_previous"
        app:layout_constraintTop_toBottomOf="@id/linerlayout_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>